--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,4 +15,4 @@ spring:
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQL10Dialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
